<resources>
    <string name="app_name">Joker</string>
    <string name="title_chat">聊天</string>
    <string name="title_home">好友</string>
    <string name="title_setting">设置</string>
    <string name="activity_loginphone_num">用户名：</string>
    <string name="activity_loginphone_pas">密码：</string>
    <string name="activity_loginphone_reg">注      册</string>
    <string name="activity_loginphone_login"><u>登 陆</u></string>
    <string name="activity_loginphone_des1">有账号了？现在就</string>
    <string name="activity_loginphone_des2">一个吧。</string>
    <string name="activity_loginphone_yan">验证码：</string>
    <string name="activity_login_login">登      陆</string>
    <string name="activity_login_reg"><u>注 册</u></string>
    <string name="activity_login_des">还没有账号？现在就</string>
    <string name="activity_login_des2">吧。</string>
    <string name="activity_login_rem">记住此账号</string>
    <string name="activity_about_about">关于</string>
    <string name="activity_about_author">作者：@大庆</string>
    <string name="activity_about_edition">版本 v2.0.3</string>
    <string name="activity_about_des">说明：</string>
    <string name="activity_about_des1">1. 感谢@玲儿叮当响 同学的测试</string>
    <string name="activity_about_des2">2. 感谢@Pegasis 大神的指导</string>
    <string name="activity_chat_edit">说点什么吧...</string>
    <string name="activity_chat_send">发送</string>
    <string name="fragment_friend_edit">搜索</string>
    <string name="fragment_friend_add">添加好友</string>
    <string name="fragment_friend_list">好友列表</string>
    <string name="fragment_my_sex">性别：null</string>
    <string name="fragment_my_quit">退出登录</string>
    <string name="fragment_my_exit">退出</string>
</resources>
