<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/background_image">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nah"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="#f1f1f1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/header1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/nah_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/nah">

        <TextView
            android:id="@+id/list_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/list_sex"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/fragment_my_sex"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/list_about"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/activity_about_about"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/list_quit"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/fragment_my_quit"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/list_exit"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="#ff5252"
            android:text="@string/fragment_my_exit"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>