<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/background_image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_find_name"
                android:theme="@style/MyEditText"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:layout_weight="1.0"
                android:hint="@string/fragment_friend_edit"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edit_ground"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColorHint="#b3b3b3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="11dp"
                android:text="@string/fragment_friend_add"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/all_friends"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_margin="3dp"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/fragment_friend_list"
                android:paddingLeft="4dp"
                android:textColor="#b3b3b3"
                android:textSize="16sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>